--- a/resources/sass/core/layout.scss
+++ b/resources/sass/core/layout.scss
@@ -20,8 +20,7 @@ a {
 body > svg { display: none; }
 
 #main {
-    @apply flex;
-    padding-top: 74px;
+    @apply flex pb-6;
 }
 
 #main .nav-main {
@@ -35,6 +34,7 @@ body > svg { display: none; }
 }
 
 @screen md {
+    #main { padding: 74px 0 0; }
     #main .content {
         padding-left: 14rem;
         @apply pt-0;
